<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoyaltyFragment"
    android:background="@color/white"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="#3F132F"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7B8B5"
            android:padding="16dp">

            <!-- ImageView for the icon -->
            <ImageView
                android:id="@+id/store_icon"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/img_16"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:id="@+id/text_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/store_icon"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/loyalty_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/loyalty_pro"
                    android:textStyle="bold"
                    android:textAppearance="@style/loyalty_pro"
                    android:gravity="top"
                    />

                <TextView
                    android:id="@+id/you_don_t_h"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/you_don_t_h"
                    android:textAppearance="@style/you_don_t_h"
                    android:gravity="top"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/view_all_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="View"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:textColor="#4A4A4A"
                android:textStyle="bold"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <!-- Second CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="#3F132F"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F7B8B5"
            android:padding="16dp">

            <!-- First Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Earn Points"
                android:textColor="#4A4A4A"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/img_17"
                    android:layout_marginTop="-5dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/purchase_a_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_a_"
                    android:textAppearance="@style/purchase_a_"
                    android:gravity="top"/>

            </LinearLayout>

            <!-- Second Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/img_17"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/sign_up_to_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_to_"
                    android:textAppearance="@style/sign_up_to_"
                    android:gravity="top"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/img_17" />

                <TextView
                    android:id="@+id/order_a_pla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_a_pla"
                    android:textAppearance="@style/order_a_pla"
                    android:gravity="top"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Redeem Rewards"
                android:textColor="#4A4A4A"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/img_17"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/off_all_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off_all_pro"
                    android:textAppearance="@style/off_all_pro"
                    android:gravity="top"
                    />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Redeem Rewards Section -->

</LinearLayout>
